# plague-andplay

./: .gitignore  Cargo.toml
.cursor/rules/: architecture.mdc
documents/json/: armillaria_spp.json  bursaphelenchus_xylophilus.json  cronartium_flaccidum.json  dioryctria_mendacella.json  dioryctria_sylvestrella.json  diprion_pini.json  gibberella_circinata.json  gremmeniella_abietina.json  heterobasidion_annosum.json  hylobius_abietis.json  ips_acuminatus.json  ips_sexdentatus.json  kabatina_thujae_juniperi.json  lecanosticta_acicola.json  leptoglossus_occidentalis.json  leucaspis_pini_pusilla.json  lophodermium_pinastri_seditiosum.json  lymantria_monacha_dispara.json  matsucoccus_feytaudi_pini.json  melampsora_pinitorqua.json  pissodes_castaneus.json  pissodes_validirostris.json  rhyacionia_buoliana_duplana.json  seiridium_cardinale.json  sphaeropsis_sapinea.json  thaumetopoea_pityocampa.json  tomicus_destruens_piniperda_minor.json
documents/md/: Aspectos-generales-Gestion-Integrada-Plagas.md  Cuadro-estrategia-Gestion-Integrada-Plagas.md  Principios-Gestion-Integrada-Plagas.md
documents/plain/: Armillaria-spp-Podredumbre-radical.txt  Bursaphelenchus-xylophilus-Nematodo-de-la-madera-del-pino.txt  Cronartium-flaccidum-Roya-del-pino.txt  Dioryctria-mendacella-Mariposa-perforadora-de-pin.txt  Dioryctria-sylvestrella-Oruga-perforadora-del-pino.txt  Diprion-pini-Mosca-de-sierra.txt  Hylobius-abietis-Gorgojo-del-pino.txt  (+20 more)
src/: bootstrap.rs  lib.rs  logging.rs  main.rs
tmp/: aspectos_generales.txt  cuadro_estrategia.txt  plagues_and_diseases.txt  principios.txt
(+44 files in other folders)
