[package]
name = "rig"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
rig-core = { version = "0.34.0", features = ["rmcp"] }
anyhow = "1"
termimad = "0.34"
crossterm = "0.29"
rmcp = { version = "0.16", features = [
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "tower",
    "auth",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
