[package]
name = "plague-andplay"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
rig-core = { version = "0.34.0", features = ["rmcp"] }
rig-qdrant = { version = "0.2" }
anyhow = "1"
termimad = "0.34"
crossterm = "0.29"
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdf-extract = "0.10"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "tool"
path = "src/bin/tool.rs"

[[bin]]
name = "main"
path = "src/main.rs"
